# Wings-of-War

./: .cproject  .gitignore  .project  CMakeLists.txt  Card.cpp  Card.h  CardSetLoader.cpp  CardSetLoader.h  Console.cpp  Console.h  Dialog.cpp  Dialog.h  Field.cpp  Field.h  Game.cpp  Game.h  GameLogger.cpp  GameLogger.h  Kicker.cpp  Kicker.h  Plane.cpp  Plane.h  README  README.md  Screen.cpp  Screen.h  SplashScreen.cpp  SplashScreen.h  WaterTile.h  WoWBrain.cpp  WoWBrain.cpp.orig  WoWBrain.h  World.cpp  World.h  docs.doxygen  main.cpp  primo_file_fabrizio.txt
assets/: assets.xml
assets/arrows/: base.xcf
assets/cardset/: 3card.xml  cardset.dtd  default_deck.xml
cmake_modules/: FindLibConfig++.cmake
include/: Animation.h  BattleField.h  Card.h  CardImage.h  CardSetLoader.h  Dialog.h  Field.h  Field.h.orig  FireBullet.h  Game.h  InputHandler.h  Kicker.h  LifeBar.h  Plane.h  SplashScreen.h  WaterTile.h  WoWBrain.h  badge.h  guiButton.h  wowcommon.h
include/resources/: ImageRes.h  Resource.h  ResourcesFactory.h  ResourcesManager.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Default.bash  Package-Release.bash  configurations.xml  configurations.xml.orig  configurations.xml.save  project.xml
src/: Animation.cpp  BattleField.cpp  Card.cpp  CardImage.cpp  CardSetLoader.cpp  Dialog.cpp  Field.cpp  FireBullet.cpp  Game.cpp  GameLogger.cpp  InputHandler.cpp  Kicker.cpp  LifeBar.cpp  Plane.cpp  SplashScreen.cpp  WaterTile.cpp  WoWBrain.cpp  World.cpp  badge.cpp  guiButton.cpp  main.cpp
src/conf/: README  game_option.cfg  red_baron.cfg
src/resources/: ImageRes.cpp  Resource.cpp  ResourcesFactory.cpp  ResourcesManager.cpp
tests/: CardTest.cpp  CardTest.h  GameLoggerTest.cpp  GameLoggerTest.h  GameLoggerTestRuner.cpp  PlaneTest.cpp  PlaneTest.h  PlaneTestRunner.cpp  WoWBrainTest.cpp  WoWBrainTest.h  WoWBrainTestRunner.cpp  WorldTest.cpp  WorldTest.h  WorldTestRunner.cpp
